--- a/preamble.tex
+++ b/preamble.tex
@@ -115,11 +115,6 @@ Cascais, Portugal}
   belowskip=\medskipamount, %0em
   escapeinside={(*@}{@*)}
 }
-\lstset{
-  language=Jules,  extendedchars=true,  basicstyle=\small\ttfamily,
-  showstringspaces=false,   showspaces=false,  numberstyle=\small,
-  numbersep=9pt,  tabsize=2, breaklines=true,  showtabs=false, captionpos=b
-}
-
+\lstset{language=julia}
 \newcommand{\code}[1]{{\ttfamily #1}\xspace}
 \renewcommand{\c}[1]{\lstinline[language=Julia]!#1!\xspace}
