--- a/style/julia.sty
+++ b/style/julia.sty
@@ -377,7 +377,7 @@ morestring=[s]{L"}{"},%
 %\setlength{\xmrgn}{(\textwidth - 80\bfem)*\real{0.1}}
 \setlength{\xmrgn}{0.05\textwidth}
 \lstset{basewidth=\bfem}
-\lstset{linewidth=\textwidth}
+\lstset{linewidth=\columnwidth}
 \lstset{xleftmargin=\xmrgn, xrightmargin=\xmrgn}
 \lstset{framexleftmargin=0.5\bfem, framexrightmargin=0.5\bfem}
 % activating the julia style
