fixes last typos from the reviewer

--- a/bib/jv.bib
+++ b/bib/jv.bib
@@ -164,7 +164,7 @@
 
 
 @article{oopsla18a,
-  author = {Jeff Bezanson and Jiahao Chen and Ben Chung
+  author = {Jeff Bezanson and Jiahao Chen and Benjamin Chung
     and  Stefan Karpinski and {Viral B.} Shah and Jan Vitek and
     Lionel Zoubritzky},
  year =  2018,
