--- a/main.tex
+++ b/main.tex
@@ -444,16 +444,16 @@ parameter that gives an arbitrary upper bound for the number of steps we are
 allowed to perform before we give up.
 
 Another implementation concern is step 3 where we need to generate a concrete
-subtype of the input type. Although, there is no built-in facility for this
+subtype of the input type. Although there is no built-in facility for this
 task, Julia allows getting immediate subtypes of a given type using the
 \c{subtypes} method. As our current implementation shows, with enough care, it
-is not hard to enumerate concrete subtypes applying the \c{subtypes} method
+is not hard to enumerate concrete subtypes by applying the \c{subtypes} method
 iteratively.
 
 \section{Evaluation}%
 \label{sec:eval}
 
-\citet{Pelenitsyn21} analyzed type stability of a corpus of open-source Julia
+\citet{Pelenitsyn21} analyzed the type stability of a corpus of open-source Julia
 packages dynamically via executing test suites of the packages and inspecting the
 resulting method instances collected from the internal state of the virtual
 machine. We propose to run our algorithm for statically inferring type stability
