more ACM unhappiness

--- a/main.tex
+++ b/main.tex
@@ -7,36 +7,20 @@
 %
 % ********************************************************************
 
-%% Copyright information
-%% Supplied to authors (based on authors' rights management selection;
-%% see authors.acm.org) by publisher for camera-ready submission;
-%% use 'none' for review submission.
-%\setcopyright{acmcopyright}
-%\setcopyright{acmlicensed}
-%\setcopyright{rightsretained}
-%\copyrightyear{2017}           %% If different from \acmYear
-%%% If you see 'ACMUNKNOWN' in the 'setcopyright' statement below,
-%%% please first submit your publishing-rights agreement with ACM (follow link on submission page).
-%%% Then please reload our instructions page and copy-and-paste the NEW commands into your article.
-%%% Please contact us in case of questions; allow up to 10 min for the system to propagate the information.
-%%%
+
 %%% The following is specific to VMIL '23 and the paper
 %%% 'Approximating Type Stability in the Julia JIT'
 %%% by Artem Pelenitsyn.
 %%%
-\copyrightyear{2023}
-\acmYear{2023}
-\setcopyright{acmlicensed}\acmConference[VMIL '23 ]{Proceedings of the 15th
-ACM SIGPLAN International Workshop on Virtual Machines and Intermediate
-Languages }{October 23, 2023}{Cascais, Portugal}
-\acmBooktitle{Proceedings of the 15th ACM SIGPLAN International Workshop on
-Virtual Machines and Intermediate Languages (VMIL '23 ), October 23, 2023,
-Cascais, Portugal}
+\setcopyright{acmlicensed}
 \acmPrice{15.00}
 \acmDOI{10.1145/3623507.3623556}
-\acmISBN{979-8-4007-0401-7/23/10}
-
+\acmYear{2023}
+\copyrightyear{2023}
 \acmSubmissionID{splashws23vmilmain-p99-p}
+\acmISBN{979-8-4007-0401-7/23/10}
+\acmConference[VMIL '23]{Proceedings of the 15th ACM SIGPLAN International Workshop on Virtual Machines and Intermediate Languages}{October 23, 2023}{Cascais, Portugal}
+\acmBooktitle{Proceedings of the 15th ACM SIGPLAN International Workshop on Virtual Machines and Intermediate Languages (VMIL '23), October 23, 2023, Cascais, Portugal}
 \received{2023-07-23}
 \received[accepted]{2023-08-28}
 
