fix title capitalization

--- a/main.tex
+++ b/main.tex
@@ -32,8 +32,8 @@
 
 \begin{document}
 
-\title[Approximating Type Stability in The Julia JIT (work in progress)]%
-{Approximating Type Stability in The Julia JIT\\(work in progress)}
+\title[Approximating Type Stability in the Julia JIT (Work in Progress)]%
+{Approximating Type Stability in the Julia JIT\\(Work in Progress)}
 
 \author{Artem Pelenitsyn}
 \orcid{0000-0001-8334-8106}
